[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jabr"
version = "0.1.0"
authors = [
    {name = "Ross Jennings", email = "rossjjennings@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "prompt_toolkit",
    "lark",
    "sympy",
]

[project.scripts]
jabr = "jabr.repl:run"

[dependency-groups]
pixi-extra = [
    "ipython",
    "pip",
]

[tool.setuptools.package-data]
jabr = ["grammar.lark"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.environments]
default = {features = ["pixi-extra"]}
